[package]
name = "neuro-flux-resolver-edge-qyk"
version = "0.1.0"
edition = "2021"
description = "Scalable backend service for AI workloads"
license = "MIT"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
